--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
    <a href="http://ka.05321888.com/ka/taocan/index.html" target="_blank">点击查看</a>
    <hr>
    <b>二.河南享卡佣金补贴政策</b>
-   <br>本月我司将对于单量达标，当月激活200+且上架独家产品的分销商免费升级企业政策，有能力的享受合伙人政策。（警！自用卡且订单结算日不足两单的不予结算佣金）
+   <br>本月我司将对于单量达标，当月激活200+且上架独家产品的分销商免费升级企业政策，有能力的享受合伙人政策。（警！自用卡且到佣金结算日，月订单数不足两单的不予结算佣金，累计两单后结算）
 7天内没出单、没招收代理、没有找公司说明情况、后台清退，防止恶意竞争和骗子！连续30天内不出单则自动清理资格！详情咨询渠道经理！对于长期且独家合作商，我司辅助在河南注册营业执照，享受补贴免税政策。
    <hr>
 
@@ -99,11 +99,11 @@
      <div class="bellows__content">
       <b>提供以下信息我司进行登记,并由财务根据订单量分配代理售后群。 </b>
       <hr> 店铺名称+真实姓名+联系电话+身份证号码+所在地区（省市）
-      <br> 注(1):后续根据实际情况需邮寄实体合同签章后寄回
-      <br> 注(2):如连续30天未开单,我司有权单方面解除合作关系
+      <br> 注(1):分销商应合作之日起30天内签署合作协议
+      <br> 注(2):如连续60天未开单,我司有权单方面解除合作关系
       <hr> 如需签订合同，
       <a href="documents/xkht.doc" target="_blank">点击下载</a>
-      <br> 一式两份打印签章后通过我司信息的地址进行邮寄 特别注意：
+      <br> 公司支持签署电子合同，需支付8元电子合同费用。也可邮寄实体合同签署 特别注意：
       <br> 如有客户产生投诉，经销商消极处理，或拒不处理，我司有权扣除佣金用于处理相关投诉！
       <br>
      </div>
