--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@
       <br> 注(2):如连续60天未开单,我司有权单方面解除合作关系
       <hr> 如需签订合同，
       <a href="documents/xkht.doc" target="_blank">点击下载</a>
-      <br> 公司支持签署电子合同，需支付8元电子合同费用。也可邮寄实体合同签署 特别注意：
-      <br> 如有客户产生投诉，经销商消极处理，或拒不处理，我司有权扣除佣金用于处理相关投诉！
+      <br> 公司支持签署电子合同，需支付8元电子合同费用。也可邮寄实体合同签署 
+      <br> 特别注意：如有客户产生投诉，经销商消极处理，或拒不处理，我司有权扣除佣金用于处理相关投诉！
       <br>
      </div>
     </div>
@@ -126,7 +126,7 @@
        <br>1、单个商品下单链接：
        <br>“左侧产品管理中心”——“在售商品管理”——单独的产品右侧有“下单链接”，复制出来就是这个产品的下单链接
        <br>2、全部商品下单链接：
-       <br>“首页”“直播上传”添加商品（具体操作方法见下方PDF）
+       <br>“首页”“直播商城”添加商品（具体操作方法见下方PDF）
        <a href="documents/敢探号商城设置方法.pdf" target="_blank">商城设置方法</a>
        <hr>
        <b>佣金发放时间？</b>
