--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <div class="bellows__content">
    <b>公司所有产品以网站更新为准</b>
    <hr>
-   <b>一.终端用户展示页，无任何联系方式,不可下单，直接转发即可</b>
+   <b>一.套餐大全展示页，无任何联系方式,不可下单，直接转发即可</b>
    <br>
    <a href="http://ka.05321888.com/ka/taocan/index.html" target="_blank">点击查看</a>
    <hr>
@@ -46,7 +46,7 @@
    <a href="http://91haoka.cn/webapp/merchant/new_query.html?code=qspb%2B9044ss5E7y0lt3O3g%3D%3D" target="_blank">自助查询</a>
    <br> (2)支撑群内提供订单信息联系客服查询
    <hr>
-   <b>五.禁发区/首充方式/快递方式/合约期等</b>
+   <b>五.禁发区/首充方式/快递方式/合约期等查询</b>
    <br> (1)
    <a href="http://tcdq.05321888.com/page/taocan/xgzl.html" target="_blank">自助查询</a>
    <br> (2)支撑群内提供订单信息联系客服查询
@@ -67,6 +67,7 @@
     <br> (2)如果您没有感叹号分销系统,
     <a href="http://www.91haoka.cn/gth/#/register?supplier_id=VqVhqVYvg4" target="_blank">点我注册</a>，自助注册即可
     <br> (3)如您使用分销系统，请将账户名报备给业务经理或客服登记，财务结算以此为依据！
+    <br> (4)后续复制下单链接发给客户下单即可。
    </div>
   </div>
   <!-- ----------------------------------------------->
@@ -81,7 +82,7 @@
      <b>2.结算方式</b>
      <br>为我司财务在次月初将订单汇总页发送到您的支撑群里,佣金核对将实时进行，实时查看,在月底前,财务将已核对的佣金,进行打款,小额采用微信/支付宝/银行卡，大额采用公司对公户打款
      <hr>
-     <b>3.未结算订单原因</b>
+     <b>3.常见未结算订单原因</b>
      <br> (1)欠费，有异议提供下单信息报财务核查
      <br> (2)未激活，有异议提供下单信息报财务核查
      <br> (3)违章停机，有异议提供下单信息报财务核查
