--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
      <br> (3)违章停机，有异议提供下单信息报财务核查
      <br> (4)机主姓名和下单信息不一致，有异议提供下单信息报财务核查
      <br> (5)月底26-31号的订单，运营商审核+发货,基本都是次月签收，需延后一个月结算
-     <br> (6)当月不足2单有效订单，财务不予结算，当月累计达到标准进行结算,请自助查询
+     <br> (6)当月不足2单有效订单，财务不予结算，累计达到标准进行结算,请自助查询
     </div>
    </div>
    <!-- ----------------------------------------------->
@@ -100,7 +100,7 @@
      <div class="bellows__content">
       <b>提供以下信息我司进行登记,并由财务根据订单量分配代理售后群。 </b>
       <hr> 店铺名称+真实姓名+联系电话+身份证号码+所在地区（省市）
-      <br> 注(1):分销商应合作之日起30天内签署合作协议
+      <br> 注(1):分销商应合作之日起签署合作协议，以免影响佣金结算
       <br> 注(2):如连续60天未开单,我司有权单方面解除合作关系
       <hr> 如需签订合同，
       <a href="documents/xkht.doc" target="_blank">点击下载</a>
