--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
  <link rel="stylesheet" href="css/bellows-theme.css">
  <!-- Example Page Styles -->
  <link rel="stylesheet" href="css/lrtk.css">
-
-<SCRIPT language=JavaScript> 
+ <SCRIPT language=JavaScript> 
  
 function password() { 
  
@@ -26,7 +25,7 @@ if (!pass1)
  
 history.go(-1); 
  
-if (pass1 == "123456") { 
+if (pass1 == "这里输入你想设置的密码") { 
  
 alert('密码正确!'); 
  
@@ -50,7 +49,7 @@ return " ";
  
 document.write(password()); 
  
-
+</SCRIPT>
 </head>
 <body>
 <h1 style="text-align:center;">河南享卡信息科技有限公司合作协议</h1>
