--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ if (!pass1)
 
 history.go(-1); 
 
-if (pass1 == "这里输入你想设置的密码") { 
+if (pass1 == "1234567") { 
 
 // alert('密码正确!'); 
 window.location.reload();
