--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
  <link rel="stylesheet" href="css/bellows-theme.css">
  <!-- Example Page Styles -->
  <link rel="stylesheet" href="css/lrtk.css">
- <SCRIPT language=JavaScript> 
+html
+<SCRIPT language=JavaScript> 
 
 function password() { 
 
@@ -25,7 +26,7 @@ if (!pass1)
 
 history.go(-1); 
 
-if (pass1 == "1234567") { 
+if (pass1 == "123456") { 
 
 // alert('密码正确!'); 
 window.location.reload();
