--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
  <link rel="stylesheet" href="css/bellows-theme.css">
  <!-- Example Page Styles -->
  <link rel="stylesheet" href="css/lrtk.css">
+<link rel="stylesheet" href="css/lrtk.css">
 <SCRIPT language=JavaScript> 
 
 function password() { 
