--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
  <!-- Example Page Styles -->
  <link rel="stylesheet" href="css/lrtk.css">
 <link rel="stylesheet" href="css/lrtk.css">
+<link rel="stylesheet" href="css/lrtk.css">
 <SCRIPT language=JavaScript> 
 
 function password() { 
