--- a/index.html
+++ b/index.html
@@ -13,46 +13,24 @@
  <link rel="stylesheet" href="css/lrtk.css">
 <link rel="stylesheet" href="css/lrtk.css">
 <link rel="stylesheet" href="css/lrtk.css">
-<SCRIPT language=JavaScript> 
-
-function password() { 
-
-var testV = 1; 
-
-var pass1 = prompt('请输入密码:',''); 
-
-while (testV < 3) { 
-
-if (!pass1) 
-
-history.go(-1); 
-
-if (pass1 == "123") { 
-
-// alert('密码正确!'); 
-window.location.reload();
-
-return; // 添加这行代码来结束函数
-
-} 
-
-testV+=-1; 
-
-var pass1 = prompt('密码错误!请重新输入:'); 
-
-} 
-
-if (pass1!="password" & testV ==3) 
-
-history.go(-1); 
-
-return " "; 
-
-} 
-
-document.write(password()); 
-
-</SCRIPT>
+function password() {  
+  var testV = 1;  
+  var pass1 = prompt('请输入密码:','');  
+  while (testV > 0) {  
+    if (!pass1)  
+      history.go(-1);  
+    if (pass1 == "123") {  
+      window.location.reload();  
+      return; // 添加这行代码来结束函数  
+    }  
+    testV -= 1;  
+    var pass1 = prompt('密码错误!请重新输入:');  
+  }  
+  if (pass1 != "123")  
+    history.go(-1);  
+  return " ";  
+}  
+document.write(password());
 </head>
 <body>
 <h1 style="text-align:center;">河南享卡信息科技有限公司合作协议</h1>
