--- a/index.html
+++ b/index.html
@@ -13,23 +13,31 @@
  <link rel="stylesheet" href="css/lrtk.css">
 <link rel="stylesheet" href="css/lrtk.css">
 <link rel="stylesheet" href="css/lrtk.css">
-function password() {  
-  var testV = 1;  
-  var pass1 = prompt('请输入密码:','');  
-  while (testV > 0) {  
-    if (!pass1)  
-      history.go(-1);  
-    if (pass1 == "123") {  
-      window.location.reload();  
-      return; // 添加这行代码来结束函数  
-    }  
-    testV -= 1;  
-    var pass1 = prompt('密码错误!请重新输入:');  
-  }  
-  if (pass1 != "123")  
-    history.go(-1);  
-  return " ";  
-}  
+function password() {
+    var testV = 1;
+
+    var pass1 = prompt('请输入密码1:','');
+
+    while (testV < 3) {
+        if (!pass1)
+            history.go(-1);
+
+        if (pass1 == "123") {
+            // window.location.reload();
+            return; // 添加这行代码来结束函数
+        }
+
+        testV += 1; // 这里应该使用 += 而不是 -=
+
+        var pass1 = prompt('密码错误!请重新输入:');
+    }
+
+    if (pass1 != "123")
+        history.go(-1);
+
+    return " ";
+}
+
 document.write(password());
 </head>
 <body>
