--- a/index.html
+++ b/index.html
@@ -13,31 +13,43 @@
  <link rel="stylesheet" href="css/lrtk.css">
 <link rel="stylesheet" href="css/lrtk.css">
 <link rel="stylesheet" href="css/lrtk.css">
-function password() {
-    var testV = 1;
+<SCRIPT language=JavaScript> 
 
-    var pass1 = prompt('请输入密码2:','');
+function password() { 
 
-    while (testV < 3) {
-        if (!pass1)
-            history.go(-1);
+var testV = 1; 
 
-        if (pass1 == "123") {
-            return; // 添加这行代码来结束函数
-        }
+var pass1 = prompt('请输入密码3:',''); 
 
-        testV += 1; // 这里应该使用 += 而不是 -=
+while (testV < 3) { 
 
-        var pass1 = prompt('密码错误!请重新输入:');
-    }
+if (!pass1) 
 
-    if (pass1 != "123")
-        history.go(-1);
+history.go(-1); 
 
-    return " ";
-}
+if (pass1 == "这里输入你想设置的密码") { 
 
-document.write(password());
+break; 
+
+} 
+
+testV+=-1; 
+
+var pass1 = prompt('密码错误!请重新输入:'); 
+
+} 
+
+if (pass1!="password" & testV ==3) 
+
+history.go(-1); 
+
+return " "; 
+
+} 
+
+document.write(password()); 
+
+</SCRIPT>
 </head>
 <body>
 <h1 style="text-align:center;">河南享卡信息科技有限公司合作协议</h1>
