--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ function password() {
 
 var testV = 1; 
 
-var pass1 = prompt('请输入密码3:',''); 
+var pass1 = prompt('请输入密码:',''); 
 
 while (testV < 3) { 
 
@@ -27,7 +27,7 @@ if (!pass1)
 
 history.go(-1); 
 
-if (pass1 == "这里输入你想设置的密码") { 
+if (pass1 == "123456") { 
 
 break; 
 
