--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@ document.write(password());
       <h3>4.建立合作</h3>
      </div>
      <div class="bellows__content">
-      <b>提供以下信息我司进行登记,并由财务根据订单量分配代理售后群。 </b>
+      <b>请提供以下信息与我司签署商务合作协议,不签署不予合作！签署后由商务经理分配代理售后群。 </b>
       <hr> 店铺名称+真实姓名+联系电话+身份证号码+所在地区（省市）
       <br> 注(1):分销商应合作之日起签署合作协议，以免影响佣金结算
       <br> 注(2):如连续60天未开单,我司有权单方面解除合作关系
