--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@ document.write(password());
       <br> 注(1):分销商应合作之日起签署合作协议，以免影响佣金结算
       <br> 注(2):如连续60天未开单,我司有权单方面解除合作关系
       <hr> 如需签订合同，
-      <a href="documents/xkht.doc" target="_blank">点击下载</a>
+      <a href="documents/xkht.doc" target="_blank">预览合同</a>
       <br> 公司支持签署电子合同，需支付8元电子合同费用。也可邮寄实体合同签署 
       <br> 特别注意：如有客户产生投诉，经销商消极处理，或拒不处理，我司有权扣除佣金用于处理相关投诉！
       <br>
